Fix z-index positioning of alternate h2 style so items do not overlap

--- a/app/assets/stylesheets/_partials/_base/_typography.scss
+++ b/app/assets/stylesheets/_partials/_base/_typography.scss
@@ -169,18 +169,18 @@ h2 {
             background: white;
             padding: 5px 10px;
             position: relative;
-            z-index: 100;
+            z-index: 99;
         }
 
         &::after {
-            background: $tertiaryColor;
+            background: $gray;
             content: "";
             height: 2px;
             position: absolute;
             left: 0;
             top: 15px;
             width: 100%;
-            z-index: 99;
+            z-index: 98;
         }
     }
 }
